# FunVM

./: FunVM.cabal  LICENSE  README.md  compiler-architecture.md
src/: Funi.hs  Test.hs
src/FunVM/: Build.hs  Core.hs  Destructors.hs  Evaluator.hs  JsCompiler.hs  Pretty.hs  Syntax.hs  TypeInferencer.hs  Types.hs
src/FunVM/Core/: Annotations.hs  Build.hs  Destructors.hs  Evaluator.hs  Pretty.hs  Syntax.hs
src/FunVM/Transformations/: DefinitionSiteArityRaising.hs  GenericTransform.hs  InlineWrapperAtCallsites.hs  ReduceLambdaApplication.hs  SimplePartialEvaluator.hs
src/FunVM/Transformations/WorkerWrapper/: DefinitionSiteArityRaising.hs  GenericTransform.hs  UseSiteArityRaising.hs
src/FunVM/WorkerWrapperTransformations/: DefinitionSiteArityRaising.hs  GenericTransform.hs  InlineWrapperAtCallsites.hs  UseSiteArityRaising.hs
